# mtg

./: .gitignore  AGENTS.md  Cargo.toml  IN_PROGRESS.md  README.md  TODO.md  WIP.md  _typos.toml  opencode.json  rust-analyzer.json
.github/workflows/: release.yml  rust.yml
crates/mtg/: Cargo.toml  README.md
crates/mtg/src/: cache.rs  cards.rs  completions.rs  deck.rs  decks.rs  error.rs  gatherer.rs  main.rs  prelude.rs  scryfall.rs  sets.rs  types.rs
crates/mtg/src/api/: cards.rs  mod.rs  sets.rs  types.rs
crates/mtg/src/companion/: mod.rs  parse.rs  watch.rs
crates/mtg/src/companion/parse/: display.rs  events.rs  events.rs.bak  find.rs  mod.rs  print.rs  utils.rs
crates/mtg/src/companion/watch/: async_processor.rs  display.rs  mod.rs  parser.rs  player_parser.rs  player_tailer.rs  resolver.rs  state.rs  tailer.rs  types.rs
crates/mtg/src/decks/: compare.rs  mcp.rs  mod.rs  stats.rs  utils.rs
crates/mtg/src/decks/ranked/: list.rs  mod.rs  show.rs
crates/mtg/src/mcp/: mod.rs  prompts.rs  resources.rs  tools.rs
crates/mtg/src/mcp/deck/: analysis.rs
crates/mtg/src/mcp/scryfall/: autocomplete.rs  collector.rs  id.rs  mod.rs  named.rs  random.rs  search.rs  utils.rs
crates/mtg/src/scryfall/: autocomplete.rs  mod.rs  random.rs  search.rs  sets.rs  smart.rs
crates/mtg_core/: Cargo.toml
crates/mtg_core/examples/: README.md  basic_usage.rs  builder_pattern.rs  cache_usage.rs  custom_base_url.rs  error_handling.rs  http_cache_usage.rs  mtg_api_cache.rs  no_rate_limiting.rs  rate_limiting.rs  raw_response.rs  search_with_params.rs
crates/mtg_core/src/: lib.rs
crates/mtg_core/src/cache/: builder.rs  disk.rs  error.rs  http.rs  mod.rs  serializer.rs  tests.rs  types.rs  utils.rs
crates/mtg_core/src/companion/: event_parser.rs  mod.rs  player_parser.rs  types.rs
crates/mtg_core/src/decks/: compare.rs  mod.rs  parser.rs  ranked.rs  stats.rs  utils.rs
crates/mtg_core/src/gatherer/: client.rs  mod.rs  types.rs
crates/mtg_core/src/scryfall/: client.rs  mod.rs  search.rs  sets.rs  smart.rs  types.rs
docs/: README.md  RELEASE.md  arena-log-parsing.md  mtg_cards.csv
docs/cli/: README.md  cards.md  completions.md  configuration.md  deck.md  gatherer.md  getting-started.md  scryfall.md  sets.md  types.md  workflow.md
docs/mcp/: README.md  enhanced.md  examples.md  overview.md  prompts.md  resources.md  setup.md  tools.md
scripts/: install-git-hooks.sh  mtg_card_search_fixed.sh  mtg_card_search_improved.sh  pre-commit-checks.sh  release.sh  test_cache.sh  test_search.sh
xtask/: Cargo.toml
