[package]
name = "mtg"
version = "0.0.0"
homepage = "https://github.com/cloudbridgeuy/mtg"
description = "Magic the Gathering API Cli"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mtg"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.132"
clap = { version = "4.5.37", features = ["derive", "string", "env"] }
clap_complete = "4.5.37"
color-eyre = "0.6.3"
env_logger = "0.11.8"
log = "0.4.27"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
anstream = "0.6.18"
prettytable = "0.10.0"
futures = "0.3.31"
clap-stdin = "0.6.0"
reqwest = { version = "0.12.9", features = ["json"] }
rmcp = { version = "0.3.0", features = ["server"] }
dirs = "5.0"
sha2 = "0.10"
urlencoding = "2.1"
